objects/Sales_Territory__c.object
<CustomObject>
    <fields>
        <fullName>Account_Access__c</fullName>
        <label>Account Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Team_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Team Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Access__c</fullName>
        <label>Case Access</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>This field will display the 18-character case sensitive ID in application reports.</description>
        <formula>Id &amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime_User_Insert__c</fullName>
        <description>This field carry the information about the user who gets inserted into sales territory user assignment, and this field gets updated with the time, when that user was inserted.</description>
        <label>DateTime User Insert</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EvaluateTerritory_for_Realignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EvaluateTerritory for Realignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupAutoNum__c</fullName>
        <description>To capture unique value for Group Creation</description>
        <displayFormat>STerr-{00}</displayFormat>
        <label>GroupAutoNum</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GroupID__c</fullName>
        <externalId>true</externalId>
        <label>GroupID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Define a Territory as Active/ Inactive</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsConfidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate sales territory is confidential or not.</description>
        <label>IsConfidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean indicating whether Territory is exposed to Partner Accounts only</description>
        <label>IsPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyComp_Crediting_Type__c</fullName>
        <description>R6 - TM</description>
        <label>Crediting Type</label>
        <picklist>
            <picklistValues>
                <fullName>AGREEMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEOGRAPHY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEGACY_PRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT_CREDIT_RELEVANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALES_REP_CODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALES_TERRITORY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TERRITORY_GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TERRITORY_MID_PARENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TERRITORY_TOP_PARENT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MyComp_Id__c</fullName>
        <description>R6 - My Comp</description>
        <label>MyComp Id</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyComp_Sales_Territory_Name__c</fullName>
        <description>Created in R6</description>
        <label>Sales Territory Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MyComp_Sales_Territory_Non_Latin_Name__c</fullName>
        <description>R6 - TM</description>
        <label>Sales Territory Non-Latin Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MyComp_Sales_Territory_Type__c</fullName>
        <description>R6 - TM</description>
        <label>Sales Territory Type</label>
        <picklist>
            <picklistValues>
                <fullName>MULTIACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFILEBASED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFILEGEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGLEACCOUNT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MyComp_Territory_Country__c</fullName>
        <description>Added in r6 for SaaSPMO 3912: https://cs10.salesforce.com/a0rJ0000002CxZB</description>
        <label>Territory Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MyComp_Territory_Region__c</fullName>
        <description>R6 - TM</description>
        <label>Territory Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_User_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a user is inserted into Sales territory user assignment,It checks weather this user is in Specialty or not,if user is in specialty, this checkbox gets checked in sales territory and those accounts are picked in the batch.</description>
        <label>New_User_Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Allows for Admin Users to add notes or comments about this territory.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_User_Speciality_Updation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related User Speciality Updation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_del__c</fullName>
        <inlineHelpText>Informational Only</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isExternal</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MyComp_Territory_Region__c</columns>
        <columns>MyComp_Territory_Country__c</columns>
        <columns>MyComp_Sales_Territory_Non_Latin_Name__c</columns>
        <columns>MyComp_Sales_Territory_Type__c</columns>
        <columns>MyComp_Crediting_Type__c</columns>
        <columns>MyComp_Id__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>IsActive__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>MyComp_Territory_Country__c</columns>
        <columns>MyComp_Territory_Region__c</columns>
        <columns>MyComp_Sales_Territory_Non_Latin_Name__c</columns>
        <columns>MyComp_Sales_Territory_Type__c</columns>
        <columns>MyComp_Crediting_Type__c</columns>
        <columns>MyComp_Id__c</columns>
        <columns>IsActive__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Territory Short Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AccessLevelNotBlank</fullName>
        <active>true</active>
        <description>Account,Case,Opportunity Access level can not be blank.</description>
        <errorConditionFormula>OR(ISPICKVAL(Account_Access__c, &apos;&apos;), ISPICKVAL(Opportunity_Access__c, &apos;&apos;), ISPICKVAL(Case_Access__c, &apos;&apos;))</errorConditionFormula>
        <errorMessage>Account, Opportunity or Case Access level can not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GroupIDMadeReadOnly</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK(PRIORVALUE(GroupID__c))) &amp;&amp; ISCHANGED( GroupID__c )</errorConditionFormula>
        <errorDisplayField>GroupID__c</errorDisplayField>
        <errorMessage>Group ID cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Flag_check_for_External_Flag</fullName>
        <active>true</active>
        <errorConditionFormula>isExternal__c  = true  &amp;&amp;  IsPartner__c = false</errorConditionFormula>
        <errorMessage>IsPartner Flag should be checked before selecting IsExternal Flag</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesTerritoryNameMadeRequired</fullName>
        <active>true</active>
        <description>Modified in R6</description>
        <errorConditionFormula>ISBLANK(MyComp_Sales_Territory_Name__c)</errorConditionFormula>
        <errorDisplayField>MyComp_Sales_Territory_Name__c</errorDisplayField>
        <errorMessage>Sales Territory Name is Required</errorMessage>
    </validationRules>
</CustomObject>